--- a/clock.html
+++ b/clock.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Creepster', cursive;
-      background: url('spooky.jpg') no-repeat center center fixed;
+      background: url('grave.jpg') no-repeat center center fixed;
       background-size: cover;
       background-color: #000;
       color: #d8cccc;
@@ -18,52 +18,38 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      position: relative;
       overflow: hidden;
+      position: relative;
     }
 
-    .header {
+    .fog {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('fog.png') repeat;
+      background-size: cover;
+      animation: drift 30s linear infinite;
+      pointer-events: none;
+      z-index: 1;
+      filter: blur(8px);
+      opacity: 50%;
+    }
+
+    @keyframes drift {
+      from { background-position: -1000px 0; }
+      to   { background-position: 0 0; }
+    }
+
+    .moon-overlay {
       position: absolute;
-      top: 20px;
-      left: 20px;
-      right: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      top: 30px;
+      right: 230px;
+      width: 220px;
+      height: 220px;
       z-index: 3;
-    }
-
-    .logo {
-      height: 70px;
-      width: auto;
-      object-fit: contain;
-    }
-
-    .top-buttons {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .btn, #formatBtn {
-      font-size: 1rem;
-      padding: 8px 16px;
-      border-radius: 6px;
-      background: rgba(200, 200, 200, 0.3);
-      color: #eee;
-      border: 1px solid #ccc;
       cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .btn:hover, #formatBtn:hover {
-      background: rgba(180, 180, 180, 0.5);
-    }
-
-    #volumeSlider {
-      width: 100px;
-      cursor: pointer;
-      accent-color: red;
     }
 
     .clock {
@@ -71,6 +57,18 @@
       text-shadow: 0 0 10px #888;
       margin-bottom: 10px;
       text-align: center;
+      z-index: 3;
+    }
+
+    @keyframes flicker {
+      0%, 100% { opacity: 1; }
+      92% { opacity: 0.2; }
+      94% { opacity: 0.6; }
+      96% { opacity: 0.1; }
+      98% { opacity: 0.9; }
+    }
+    .clock {
+      animation: flicker 4s infinite;
     }
 
     .clock .session {
@@ -86,72 +84,35 @@
       text-shadow: 0 0 10px #000;
       margin-bottom: 20px;
       text-align: center;
-    }
-
-    .fog {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('fog.png') repeat center center;
-      background-size: cover;
-      opacity: 0.6;
-      animation: drift 60s linear infinite;
-      pointer-events: none;
-      z-index: 1;
-      filter: blur(8px);
-    }
-
-    @keyframes drift {
-      from { background-position: 0 0; }
-      to { background-position: 1000px 0; }
+      z-index: 3;
     }
 
     .content {
-      z-index: 2;
+      z-index: 3;
       text-align: center;
       width: 100%;
     }
 
-    /* Vibrant spooky mode */
-    body.vibrant-theme {
-      color: #ff4d4d;
+    .btn {
+      font-size: 1rem;
+      padding: 8px 16px;
+      border-radius: 6px;
+      background: rgba(200, 200, 200, 0.3);
+      color: #eee;
+      border: 1px solid #ccc;
+      cursor: pointer;
+      transition: background 0.3s;
     }
 
-    body.vibrant-theme .clock {
-      color: #ff4d4d;
-      text-shadow: 0 0 20px red, 0 0 40px crimson;
-    }
-
-    body.vibrant-theme .clock .session {
-      color: #aaffff;
-      text-shadow: 0 0 10px #00ffee;
-    }
-
-    body.vibrant-theme .btn,
-    body.vibrant-theme #formatBtn {
-      background: rgba(255, 0, 0, 0.7);
-      color: #fff;
-      border: none;
-    }
-
-    body.vibrant-theme .btn:hover,
-    body.vibrant-theme #formatBtn:hover {
-      background: rgba(255, 50, 50, 0.9);
+    .btn:hover {
+      background: rgba(180, 180, 180, 0.5);
     }
   </style>
 </head>
 <body>
+  
   <div class="fog"></div>
-
-  <div class="header">
-    <img src="ad-logo.png" alt="Logo" class="logo" />
-    <div class="top-buttons">
-      <input type="range" id="volumeSlider" min="0" max="100" value="100" title="Volume" />
-      <button class="btn small" onclick="toggleTheme()" id="themeBtn">🩸</button>
-    </div>
-  </div>
+  <div class="moon-overlay" onclick="playHowl()"></div>
 
   <div class="content">
     <div class="clock" id="clock">00:00:00</div>
@@ -159,19 +120,17 @@
     <button class="btn" onclick="toggleFormat()" id="formatBtn">Switch to 12-hour</button>
   </div>
 
-  <!-- Ticking sound -->
   <audio id="tick-sound" src="tick.mp3" preload="auto"></audio>
+  <audio id="howl-sound" src="howl.mp3" preload="auto"></audio>
+  <audio id="wind-sound" src="wind.mp3" preload="auto" loop></audio>
 
   <script>
     let is24Hour = true;
     let isAudioEnabled = false;
 
     const tickSound = document.getElementById('tick-sound');
-    const volumeSlider = document.getElementById('volumeSlider');
-
-    volumeSlider.addEventListener('input', () => {
-      tickSound.volume = volumeSlider.value / 100;
-    });
+    const howlSound = document.getElementById('howl-sound');
+    const windSound = document.getElementById('wind-sound');
 
     function updateClock() {
       const now = new Date();
@@ -213,16 +172,17 @@
       updateClock();
     }
 
-    function toggleTheme() {
-      document.body.classList.toggle('vibrant-theme');
-      const themeBtn = document.getElementById('themeBtn');
-      themeBtn.textContent = document.body.classList.contains('vibrant-theme') ? '🌑' : '🩸';
-    }
-
     function unlockAudio() {
       isAudioEnabled = true;
+      windSound.volume = 0.8;
+      windSound.play().catch(() => {});
       updateClock();
       document.removeEventListener('click', unlockAudio);
+    }
+
+    function playHowl() {
+      howlSound.currentTime = 0;
+      howlSound.play().catch(() => {});
     }
 
     setInterval(updateClock, 1000);
